# Pathtraced

./: .gitignore  CLAUDE.md  CMakeLists.txt  Pathtraced.cbp  README.md  Resources.md  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  m3d.cpp  m3d.hpp  main.cpp  materials.cpp  materials.hpp  math.cpp  math.hpp  optics.cpp  optics.hpp  random_scene.scn  render.cpp  render.hpp  scene.cpp  scene.hpp  types.h  util.cpp  util.hpp
.cache/clangd/index/: hitpoint.cpp.2B5071183484629F.idx  hitpoint.hpp.9022670B7619ADBD.idx  hittable.hpp.A2457EE5CC5F6966.idx  image.cpp.52DCDC519029D15E.idx  image.hpp.76B7C1B472235CF9.idx  m3d.cpp.4A69E31C5432635B.idx  m3d.hpp.E30024A23E5DE55D.idx  main.cpp.727ED7ECFF2B898F.idx  material.cpp.335A050D779E8492.idx  material.hpp.D969B8BEC5798413.idx  object.cpp.AD15BC781107C119.idx  object.hpp.F56CB0DF626A519F.idx  quad.cpp.0F0FC876B83A7895.idx  quad.hpp.E85CC2DFD3C1ACEE.idx  ray.cpp.D303FBB88C19D6DC.idx  ray.hpp.E6185356E69C7C2C.idx  render.cpp.A19AF4F88ACD2A1E.idx  render.hpp.13873DCBD691E9E2.idx  scatter_result.cpp.C2258B1C1C90D0DA.idx  scatter_result.hpp.304F87A58FC8F2FF.idx  scene.cpp.9DCA31D891E24EB2.idx  scene.hpp.443CDFD6E859CC55.idx  scene_creator.cpp.5BCC80BA72DB81E2.idx  scene_creator.hpp.A2C6A7242B2EE94E.idx  sphere.cpp.D67A63A87984E20F.idx  sphere.hpp.FB7501D7CDE0DE04.idx  triangle.cpp.35AF48DC5EA5B084.idx  triangle.hpp.C4E8679A01FCFE37.idx  util.cpp.E62FC931B3042990.idx  util.hpp.B58529E9419F6077.idx
resource/scenes/: default_scene.sc
scenes/: default_scene.scn  random_scene1.scn  random_scene2.scn  random_scene3.scn  random_scene4.scn  random_scene5.scn
src/include/: geometry.hpp  geometry_maker.hpp  hitpoint.hpp  m3d.hpp  optics.hpp  ray.hpp  render.hpp  util.hpp
src/include/geometry/: hittable.hpp  quad.hpp  sphere.hpp  triangle.hpp
src/include/lib/: image.hpp  m3d.hpp
src/include/material/: material.hpp  scatter_result.hpp
src/include/math/: hitpoint.hpp  ray.hpp  util.hpp
src/include/scene/: object.hpp  scene.hpp
src/include/util/: gpu_scene.hpp  metal_render.hpp  render.hpp  scene_creator.hpp
src/shaders/: pathtracer.metal
src/sources/: geometry.cpp  hitpoint.cpp  image.cpp  main.cpp  optics.cpp  ray.cpp  render.cpp  util.cpp
src/sources/geometry/: quad.cpp  sphere.cpp  triangle.cpp
src/sources/lib/: image.cpp  m3d.cpp  stb_image_write.cpp
src/sources/material/: material.cpp  scatter_result.cpp
src/sources/math/: hitpoint.cpp  ray.cpp  util.cpp
src/sources/scene/: object.cpp  scene.cpp
src/sources/util/: metal_render.mm  render.cpp  scene_creator.cpp
